--- a/unittest/Microsoft.WindowsAzure.MobileServices.TestFramework/Microsoft.WindowsAzure.Mobile.TestFramework.csproj
+++ b/unittest/Microsoft.WindowsAzure.MobileServices.TestFramework/Microsoft.WindowsAzure.Mobile.TestFramework.csproj
@@ -1,9 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="..\..\build\Microsoft.Azure.Mobile.Client.Build.props" />  
+  <Import Project="..\..\build\Microsoft.Azure.Mobile.Client.Build.props" />
   <PropertyGroup>
-    <TargetFramework>netstandard1.1</TargetFramework>
+    <TargetFramework>netstandard1.3</TargetFramework>
     <!-- Workaround until Xamarin supports PPDB -->
     <DebugType>full</DebugType>
-  </PropertyGroup>  
+	<PackageTargetFallback Condition=" '$(TargetFramework)' == 'netstandard1.3' ">portable-net45+win81</PackageTargetFallback>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Loqu8|AnyCPU'" />
 </Project>
