--- a/src/Microsoft.Azure.Mobile.Client/Microsoft.Azure.Mobile.Client.csproj
+++ b/src/Microsoft.Azure.Mobile.Client/Microsoft.Azure.Mobile.Client.csproj
@@ -57,4 +57,8 @@
 		<PackageReference Include="System.Linq.Queryable" Version="4.3.0" />
 		<Compile Include="Platforms\netstandard1_3\**\*.cs" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="Platforms\netstandard1_3\IPlatformQueryImpl.cs" />
+	</ItemGroup>
 </Project>
